<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfilActivity">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btn_back"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="#FAFAFA"
        android:clickable="true"
        android:contentDescription="@string/todo"
        app:backgroundTint="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.047"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_arrow_back_24"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/icon_label"
        android:layout_width="103dp"
        android:layout_height="96dp"
        android:layout_marginTop="96dp"
        android:src="@drawable/aria"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.09"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tag_following"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/tag_following"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.408"
        app:layout_constraintStart_toEndOf="@+id/tag_followers"
        app:layout_constraintTop_toBottomOf="@+id/lbl_following" />

    <TextView
        android:id="@+id/tag_post"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="8dp"
        android:text="@string/tag_post"
        android:textColor="#040404"
        app:layout_constraintStart_toEndOf="@+id/icon_label"
        app:layout_constraintTop_toBottomOf="@+id/lbl_post" />

    <TextView
        android:id="@+id/lbl_post"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="120dp"
        android:text="@string/post"
        android:textColor="#040404"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/icon_label"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_message"
        android:layout_width="165sp"
        android:layout_height="48dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="28dp"
        android:backgroundTint="#E2E4E4"
        android:text="@string/btn_message"
        android:textColor="#100F0F"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.777"
        app:layout_constraintStart_toEndOf="@+id/button_biru"
        app:layout_constraintTop_toBottomOf="@+id/tag_p2"
        app:rippleColor="#918B8B" />

    <TextView
        android:id="@+id/tag_followers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:text="@string/tag_followers"
        android:textColor="#000000"
        app:layout_constraintStart_toEndOf="@+id/tag_post"
        app:layout_constraintTop_toBottomOf="@+id/lbl_followers" />

    <TextView
        android:id="@+id/tag_p2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="88dp"
        android:text="codewrite_"
        android:textColor="#4049ED"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.005"
        app:layout_constraintStart_toEndOf="@+id/tag_p1"
        app:layout_constraintTop_toBottomOf="@+id/tag_post" />

    <TextView
        android:id="@+id/tag_p1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="12dp"
        android:text="@string/tag_p1"
        android:textColor="#020202"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tag_name" />

    <TextView
        android:id="@+id/tag_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/tag_name"
        android:textColor="#000000"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.075"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/icon_label" />

    <TextView
        android:id="@+id/lbl_followers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="120dp"
        android:text="@string/following"
        android:textColor="#000000"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/lbl_post"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/lbl_following"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:text="@string/follow"
        android:textColor="#000000"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.473"
        app:layout_constraintStart_toEndOf="@+id/lbl_followers"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_biru"
        android:layout_width="165sp"
        android:layout_height="48dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:backgroundTint="#0095F6"
        android:text="@string/btn_follow"
        android:textColor="#212121"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tag_p1" />


</androidx.constraintlayout.widget.ConstraintLayout>